[STD-102] Unifying culling and instancing into a single component - Adding LODs to mesh component - Adding LOD selection algorithm to RenderingTask - Adding isCulled flag to Transformation - Completing streaming pipeline - Implementing texture loader - Implementing opengl texture creation - Creating fallback directory in case no project exists or is currently selected